fix/Hide the overflow in the flex-container

--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ button:disabled {
     background-color: #000;
     height: 50%;
     padding: 1rem;
+    overflow: hidden;
 }
 
 .child {
